--- a/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/xoops20/theme.html
+++ b/XoopsCore/branches/tasks/121476-tplset-remove/htdocs/themes/xoops20/theme.html
@@ -38,7 +38,7 @@
       <td id="leftcolumn">
         <!-- Start left blocks loop -->
         <{foreach item=block from=$xoops_lblocks}>
-          <{include file="default/theme_blockleft.html"}>
+          <{include file="xoops20/theme_blockleft.html"}>
         <{/foreach}>
         <!-- End left blocks loop -->
 
@@ -55,7 +55,7 @@
 
             <!-- Start center-center blocks loop -->
             <{foreach item=block from=$xoops_ccblocks}>
-              <{include file="default/theme_blockcenter_c.html"}>
+              <{include file="xoops20/theme_blockcenter_c.html"}>
             <{/foreach}>
             <!-- End center-center blocks loop -->
 
@@ -66,7 +66,7 @@
 
             <!-- Start center-left blocks loop -->
               <{foreach item=block from=$xoops_clblocks}>
-                <{include file="default/theme_blockcenter_l.html"}>
+                <{include file="xoops20/theme_blockcenter_l.html"}>
               <{/foreach}>
             <!-- End center-left blocks loop -->
 
@@ -74,7 +74,7 @@
 
             <!-- Start center-right blocks loop -->
               <{foreach item=block from=$xoops_crblocks}>
-                <{include file="default/theme_blockcenter_r.html"}>
+                <{include file="xoops20/theme_blockcenter_r.html"}>
               <{/foreach}>
             <!-- End center-right blocks loop -->
 
@@ -95,7 +95,7 @@
       <td id="rightcolumn">
         <!-- Start right blocks loop -->
         <{foreach item=block from=$xoops_rblocks}>
-          <{include file="default/theme_blockright.html"}>
+          <{include file="xoops20/theme_blockright.html"}>
         <{/foreach}>
         <!-- End right blocks loop -->
       </td>
